# uof-risk-app

./: .gitignore  README.md  pyproject.toml  run_pipeline.py
.zen/: config.yaml
app/: app.py
pipelines/: training_pipeline.py
saved_model/: fairness_fairlearn.json  highrisk_v1_meta.json  highrisk_v1_report.txt  holdout_highrisk.parquet
src/: calibration_plots_fairness_utils.py  cf_utils.py  cleaning_data.py  combiner.py  data_ingestion.py  eda.py  modeling.py  preprocessing.py
steps/: clean_data.py  eda_step.py  feature_eng.py  finalise_model.py  ingest_data.py  merge_data.py  plot_shap_importance.py
