[project]
name = "dissertation-data-science-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "zenml[server]==0.83.0",
  "ruff",
  "pandas>=2.3",
  "logging>=0.4.9.6",
  "typing>=3.10.0.0",
  "openpyxl>=3.1.5",
  "docker>=7.1.0",
  "pyarrow>=20.0.0",
  "setuptools<81",
  "ipykernel>=6.29.5",
  "joblib>=1.5.1",
  "lightgbm>=4.6.0",
  "numpy==1.26.4",
  "category-encoders>=2.6",
  "scikit-learn==1.5.2",
  "imbalanced-learn==0.12.4",
  "mlflow>=3.1.4",
  "shap>=0.44,<0.47",
  "numba==0.59.1",
  "llvmlite==0.42.0",
  "matplotlib>=3.8",
  "scipy>=1.10",
  "dice-ml>=0.12",
  "streamlit>=1.47.1",
  "fairlearn>=0.12.0",
  "uncertainty-calibration>=0.1.4",
  "pycalib>=0.1.0.dev6",
  "seaborn>=0.13.2",
  "imblearn>=0.0",
  "pathlib>=1.0.1",
  "dice>=4.0.0",
  "datetime>=5.5",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pandas-stubs>=2.3.0.250703",
    "pytest>=8.4.1",
]

